Allow mentions in occurrence commands